sfdx-source/main/default/objects/vccEndpoint__mdt/vccEndpoint__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is used to store endpoints (ie. trailing path information) that, when combined with a Named Credential, will form a complete URL:
        {host}/{endpoint}</description>
    <label>Endpoint</label>
    <pluralLabel>Endpoints</pluralLabel>
</CustomObject>