sfdx-source/main/default/objects/vccEndpoint__mdt/fields/VCC_Assigning_Facility__c.field-meta.xml
<CustomField>
    <fullName>VCC_Assigning_Facility__c</fullName>
    <description>Assigning facility field on POST request to HDR</description>
    <label>VCC Assigning Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>