sfdx-source/main/default/objects/vccEndpoint__mdt/fields/VCC_Datasets__c.field-meta.xml
<CustomField>
    <fullName>VCC_Datasets__c</fullName>
    <description>datasets parameter for vetRetrieve service from DIP. Options include [VA_PROFILE, BGS, EE]</description>
    <label>VCC Datasets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>