sfdx-source/main/default/objects/vccEndpoint__mdt/fields/VCC_Enviornment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Enviornment__c</fullName>
    <label>VCC Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROD</fullName>
                <default>true</default>
                <label>PROD</label>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>