sfdx-source/main/default/objects/vccEndpoint__mdt/fields/VCC_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Id_Type__c</fullName>
    <description>idType property on request body for vetRetrieve Callout</description>
    <label>VCC Id Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>