sfdx-source/main/default/objects/vccEndpoint__mdt/fields/VCC_Show_Correlated__c.field-meta.xml
<CustomField>
    <fullName>VCC_Show_Correlated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>showCorrelated property on request body for vetRetrieve Callout</description>
    <label>VCC Show Correlated</label>
    <type>Checkbox</type>
</CustomField>