sfdx-source/main/default/objects/vccEndpoint__mdt/listViews/Allzzz.listView-meta.xml
<ListView>
    <fullName>Allzzz</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Path__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>